helm version 4.6.2 updates

--- a/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
+++ b/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
@@ -3,9 +3,13 @@ kind: Secret
 metadata:
   name: hdp-secrets
 data:
-  hdp-admin-password: ZDJjYWRtIUAjMTIz
-  hdp-user-password: ZDJjdXNyIUAjMTIz
-  account-database-admin-username: cGdhZG1pbg==
-  account-database-admin-password: cGdhZG1wd2QhQCMxMjM=
-  account-database-user-username: cGd1c2Vy
-  account-database-user-password: cGd1c3Jwd2QhQCMxMjM=
+  # Please fill in the following values with the appropriate secrets
+  # These values are mandatory and should not be empty for the chart deployment to work
+  # Ensure to provide base64 encoded values for all the fields
+  # Example: echo -n 'your-value' | base64
+  hdp-admin-password: ""
+  hdp-user-password: ""
+  account-database-admin-username: ""
+  account-database-admin-password: ""
+  account-database-user-username: ""
+  account-database-user-password: ""
