--- a/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
+++ b/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
@@ -7,9 +7,10 @@ data:
   # These values are mandatory and should not be empty for the chart deployment to work
   # Ensure to provide base64 encoded values for all the fields
   # Example: echo -n 'your-value' | base64
-  hdp-admin-password: ""
-  hdp-user-password: ""
-  account-database-admin-username: ""
-  account-database-admin-password: ""
-  account-database-user-username: ""
-  account-database-user-password: ""
+  #         hdp-admin-password: base64-password
+  hdp-admin-password: 
+  hdp-user-password: 
+  account-database-admin-username: 
+  account-database-admin-password: 
+  account-database-user-username: 
+  account-database-user-password: 
